--- a/Code/index.html
+++ b/Code/index.html
@@ -7,9 +7,16 @@
     <title>Home - NLClinique</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -45,10 +52,10 @@
                 <div class="priority-tag">
                     <p>YOUR HEALTH IS OUR PRIORITY</p>
                 </div>
-                
+
                 <h1>More Than Medicine <br>It's Personal</h1>
                 <h5>Wellness Hospital will always serve you <br>wholeheartedly. Health is a priority.</h5>
-                
+
                 <div class="hero-buttons">
                     <button class="btn-primary">Book Appointment
                         <img src="media/arrow-right.png" alt="arrow right">
@@ -113,16 +120,30 @@
 
     <section class="partners">
         <div class="pcontent">
-        <img src="media/partners/1.png" alt="">
-        <img src="media/partners/2.png" alt="">
-        <img src="media/partners/3.png" alt="">
-        <img src="media/partners/4.png" alt="">
+            <img src="media/partners/1.png" alt="">
+            <img src="media/partners/2.png" alt="">
+            <img src="media/partners/3.png" alt="">
+            <img src="media/partners/4.png" alt="">
         </div>
     </section>
     <section class="space"></section>
     <section class="aboutus">
         <section class="aucontent">
+            <div id="circle"></div>
+            <div class="auleft">
+                <div>
+                    <img src="media/about/image1.png" alt="" width="700">
 
+                </div>
+                <div class="imgtxt">
+                    <img src="media/about/image2.png" alt="" width="400" id="ab2img">
+                    <div class="exp-tag">
+                        <h3><span style="font-weight: 800; font-size: 50px;">20</span><br><span
+                                style="font-weight: 400; ">Years Experience</span></h3>
+                    </div>
+                </div>
+
+            </div>
         </section>
     </section>
 
