finishing about section + stats section

--- a/Code/index.html
+++ b/Code/index.html
@@ -144,7 +144,71 @@
                 </div>
 
             </div>
+            <div class="auright">
+                <div id="topau">
+                    <p>ABOUT US</p>
+                </div>
+                <div>
+                    <h3 style="font-size: 3em; position: relative; top: 50px; letter-spacing: 2px;">We Are Always Ensure
+                        <br>Best Medical
+                        Treatment</h3>
+                </div>
+                <p style="color: black; width: 540px; position: relative;;font-size: 1.2em; margin-top: 90px;">Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit.
+                    Etiam hendrerit metus ex, id ullamcorper massa accumsan
+                    volutpat. Etiam viverra pharetra dui, nec aliquet nisi
+                    consequat sit amet. </p>
+
+                <div class="testau">
+                    <div class="persons">
+                        <img src="media/about/person1.png" alt="">
+                        <img src="media/about/person2.png" alt="" id="srdimg">
+                    </div>
+                    <div style="display: block">
+                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit metus ex, id
+                            ullamcorper massa accumsan volutpat. Etiam viverra pharetra dui, nec aliquet nisi consequat
+                            sit amet.”</p>
+                        <div class="aubtm">
+                            <img src="media/about/icon.png" alt="" id="abic">
+                            <p>Vice Director of Wellness Hospital</p>
+                            <img src="media/about/line.png" alt="" id="lineico">
+                        </div>
+                    </div>
+
+
+                </div>
+                <button class="btn-primary"
+                    style="position: relative; top: 8EM; width: 15em; background-color: #DB4746; border: 2px solid #FF6F61; border-radius: 100px; padding:23px 20px 23px 23px;">More
+                    About US
+                    <img src="media/arrow-right.png" alt="arrow right"
+                        style="height: 70%;position: absolute; right: 10%;">
+                </button>
+            </div>
         </section>
+    </section>
+
+    <section class="stats">
+        <div class="numbers">
+            <div class="op">
+                <div>
+                    <h1>500k+</h1>
+                    <h3>Recovered Patients</h3>
+                </div>
+                <div>
+                    <h1>90+</h1>
+                    <h3>Expert Doctors</h3>
+                </div>
+                <div>
+                    <h1>95%</h1>
+                    <h3>Satisfaction Rate</h3>
+                </div>
+
+                <div>
+                    <h1>100+</h1>
+                    <h3>Awards</h3>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
