finishing aboutus - finishing services - starting on doctor section

--- a/Code/index.html
+++ b/Code/index.html
@@ -151,7 +151,8 @@
                 <div>
                     <h3 style="font-size: 3em; position: relative; top: 50px; letter-spacing: 2px;">We Are Always Ensure
                         <br>Best Medical
-                        Treatment</h3>
+                        Treatment
+                    </h3>
                 </div>
                 <p style="color: black; width: 540px; position: relative;;font-size: 1.2em; margin-top: 90px;">Lorem
                     ipsum dolor sit amet, consectetur adipiscing elit.
@@ -208,6 +209,181 @@
                     <h3>Awards</h3>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="scontent">
+            <div id="topau">
+                <p>OUR SERVICES</p>
+            </div>
+            <div class="top">
+                <h2>
+                    Experienced in Multiplie <br> Medical Specialities
+                </h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Etiam hendrerit metus ex, id
+                    ullamcorper massa accumsan <br>volutpat. </p>
+            </div>
+            <div class="firstrow">
+                <div class="cardsection">
+                    <div class="cardcontent">
+                        <div class="cardtop">
+                            <img src="media/service/1.png" alt="">
+                            <h1>01</h1>
+                        </div>
+                        <div class="cardtext">
+                            <h3>Dental Care</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim lorem quis
+                                consequat.</p>
+                        </div>
+
+                        <button>Explore More </button>
+                    </div>
+
+                </div>
+
+                <div class="cardsection">
+                    <div class="cardcontent">
+                        <div class="cardtop">
+                            <img src="media/service/2.png" alt="">
+                            <h1>02</h1>
+                        </div>
+                        <div class="cardtext">
+                            <h3>Orthopedicse</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim lorem quis
+                                consequat.</p>
+                        </div>
+
+                        <button style="background-color: #FFF3F2;">Explore More </button>
+                    </div>
+
+                </div>
+                <div class="cardsection">
+                    <div class="cardcontent">
+                        <div class="cardtop">
+                            <img src="media/service/3.png" alt="">
+                            <h1>03</h1>
+                        </div>
+                        <div class="cardtext">
+                            <h3>Heart Care</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim lorem quis
+                                consequat.</p>
+                        </div>
+
+                        <button>Explore More </button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="secondrow">
+                <div class="cardsection">
+                    <div class="cardcontent">
+                        <div class="cardtop">
+                            <img src="media/service/4.png" alt="">
+                            <h1>04</h1>
+                        </div>
+                        <div class="cardtext">
+                            <h3>Pathology</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim lorem quis
+                                consequat.</p>
+                        </div>
+
+                        <button>Explore More </button>
+                    </div>
+
+                </div>
+                <div class="cardsection">
+                    <div class="cardcontent">
+                        <div class="cardtop">
+                            <img src="media/service/5.png" alt="">
+                            <h1>05</h1>
+                        </div>
+                        <div class="cardtext">
+                            <h3>Eye Care</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim lorem quis
+                                consequat.</p>
+                        </div>
+
+                        <button>Explore More </button>
+                    </div>
+
+                </div>
+                <div class="cardsection">
+                    <div class="cardcontent">
+                        <div class="cardtop">
+                            <img src="media/service/6.png" alt="">
+                            <h1>06</h1>
+                        </div>
+                        <div class="cardtext">
+                            <h3>Internal Diseasee</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim lorem quis
+                                consequat.</p>
+                        </div>
+
+                        <button>Explore More </button>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <button class="btn-primary"
+                style="position: relative; top: 2em; left: 28em; width: 15em; background-color: #FF6F61; border: 2px solid #FF6F61; border-radius: 100px; padding:23px 20px 23px 23px;">See
+                More Services
+                <img src="media/arrow-right.png" alt="arrow right" style="height: 70%;position: absolute; right: 6%;">
+            </button>
+        </div>
+    </section>
+
+    <section class="ourdoctors">
+        <section class="doc-content">
+            <div class="doc-top">
+                <div id="topdoc">
+                    <p>OUR DOCTORS</p>
+                </div>
+                <h2>
+                    Meet Our Expert <br> Doctors
+                </h2>
+            </div>
+        </section>
+        <div class="doc-main-content">
+            <div class="doc-co">
+                <div class="row1">
+                    <div class="doccard">
+                <div class="doccard-top">
+                    <img src="media/doctors/1.png" alt="">
+                </div>
+                <div class="doccard-mid">
+                    <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
+                    <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                    <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">Cardiologist with 8 years experience. Has been certified as the best heart doctor.</p>
+                </div>
+            </div>
+            <div class="doccard">
+                <div class="doccard-top">
+                    <img src="media/doctors/1.png" alt="">
+                </div>
+                <div class="doccard-mid">
+                    <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
+                    <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                    <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">Cardiologist with 8 years experience. Has been certified as the best heart doctor.</p>
+                </div>
+            </div>
+            <div class="doccard">
+                <div class="doccard-top">
+                    <img src="media/doctors/1.png" alt="">
+                </div>
+                <div class="doccard-mid">
+                    <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
+                    <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                    <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">Cardiologist with 8 years experience. Has been certified as the best heart doctor.</p>
+                </div>
+            </div>
+                </div>
+            
+            </div>
+
         </div>
     </section>
 
