finishing about page -- starting on doctors page

--- a/Code/index.html
+++ b/Code/index.html
@@ -340,7 +340,7 @@
     <section class="ourdoctors">
         <section class="doc-content">
             <div class="doc-top">
-                <div id="topdoc">
+                <div id="topdoc" style="">
                     <p>OUR DOCTORS</p>
                 </div>
                 <h2>
