adding our doctors section into doctor page

--- a/Code/index.html
+++ b/Code/index.html
@@ -340,7 +340,7 @@
     <section class="ourdoctors">
         <section class="doc-content">
             <div class="doc-top">
-                <div id="topdoc" style="">
+                <div id="topdoc">
                     <p>OUR DOCTORS</p>
                 </div>
                 <h2>
@@ -491,6 +491,7 @@
 
                     <p>Waiting Chair</p>
                 </div>
+                
                 <div class="feature-item">
                     <img src="media/call-in-action/checkmark.png" alt="">
                     <p>Bathroom (Hot & Cold Water)</p>
