--- a/Code/pages/about.html
+++ b/Code/pages/about.html
@@ -38,7 +38,7 @@
                     <a href="#">About</a>
                     <img src="../media/under.png" alt="underline">
                 </div>
-                <a href="#">Doctors</a>
+                <a href="doctors.html">Doctors</a>
                 <a href="#">Services</a>
                 <a href="#">Contact</a>
             </nav>
