--- a/Code/pages/doctors.html
+++ b/Code/pages/doctors.html
@@ -83,7 +83,7 @@
                             <img src="../media/doctors/1.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
+                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
                                 <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
@@ -92,10 +92,10 @@
                     </div>
                     <div class="doccard">
                         <div class="doccard-top">
-                            <img src="../media/doctors/1.png" alt="">
+                            <img src="../media/doctors/2.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
+                            <h2 style="color: #2677BC;font-weight: bold;">Irma Winnifred</h3>
                                 <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
@@ -106,11 +106,11 @@
                  <div class="doc-column">
                     <div class="doccard" style=" width: 300%;margin-right: 20px;position: relative;right: 300px;">
                         <div class="doccard-top">
-                            <img src="../media/doctors/1.png" alt="">
+                            <img src="../media/doctors/3.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Mnason Prabhakar</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Phatologist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -120,11 +120,11 @@
                  <div class="doc-row">
                 <div class="doccard">
                         <div class="doccard-top">
-                            <img src="../media/doctors/1.png" alt="">
+                            <img src="../media/doctors/4.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Lage Rodrigo</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Orthopedics</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -132,11 +132,11 @@
                     </div>
                     <div class="doccard">
                         <div class="doccard-top">
-                            <img src="../media/doctors/1.png" alt="">
+                            <img src="../media/doctors/5.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Giusi Marjut</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Surgeon</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -146,20 +146,27 @@
                 <div class="doc-column">
                     <div class="doccard" style=" width: 300%;margin-right: 20px;position: relative;right: 300px;">
                         <div class="doccard-top">
-                            <img src="../media/doctors/1.png" alt="">
+                            <img src="../media/doctors/6.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Freyr Johano</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Internist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
                         </div>
                     </div>
                  </div>
-            </div>      
+                           <button class="btn-primary"
+                    style="position: relative; top: 2em; width: 15em; background-color: #FF6F61; border: 2px solid #FF6F61; border-radius: 100px; padding:23px 20px 23px 23px;">See
+                    More Services
+                    <img src="../media/arrow-right.png" alt="arrow right"
+                        style="height: 70%;position: absolute; right: 6%;">
+                </button>
+            </div>
+      
     </section>
-    
+    <div class="space"></div>
        <footer>
     <div class="footer-container">
         <div class="footer-left">
