fixing a problem in hero spacing problem between hero section and about section

--- a/Code/index.html
+++ b/Code/index.html
@@ -127,7 +127,7 @@
             <img src="media/partners/4.png" alt="">
         </div>
     </section>
-    <section class="space"></section>
+    <section class="spacee"></section>
     <section class="aboutus">
         <section class="aucontent">
             <div id="circle"></div>
