adding pricing section into doctors page

--- a/Code/pages/doctors.html
+++ b/Code/pages/doctors.html
@@ -169,6 +169,134 @@
 
 
     <div class="space"></div>
+
+    <section class="pricing">
+        <div class="pricing-header">
+            <div class="header-left">
+                <div id="pr">
+                    <p>PRICING</p>
+                </div>
+                <h2>
+                    Pick a Plan for <br> Hospitalization Cost
+                </h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Etiam hendrerit metus ex, id ullamcorper
+                massa accumsan <br>volutpat. </p>
+        </div>
+
+        <div class="pricing-cards-container">
+            <div style="display: flex; gap: 12px;">
+                <div class="price-card">
+                    <h3>Join Room</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit metus ex, id ullamcorper
+                        massa accumsan volutpat.</p>
+                    <h4>$19.3 <span class="per-person">/ Person</span></h4>
+                    <div class="line-separator"></div>
+                    <h5>Features</h5>
+                    <div class="features-list">
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>Bedside Cabinet</p>
+                        </div>
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>Waiting Chair</p>
+                        </div>
+
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+                            <p>Bathroom (Hot & Cold Water)</p>
+                        </div>
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>TV LED</p>
+                        </div>
+                    </div>
+                    <button class="btn-see-features">See More Features</button>
+                    <p class="or-text">or</p>
+                    <button class="btn-choose-plan">Choose Plan</button>
+                </div>
+
+                <div class="price-card">
+                    <h3>VIP <span class="recommended-text">(Recommended)</span></h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit metus ex, id ullamcorper
+                        massa accumsan volutpat.</p>
+                    <h4>$30.5 <span class="per-person">/ Person</span></h4>
+                    <div class="line-separator"></div>
+                    <h5>Features</h5>
+                    <div class="features-list">
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>Bedside Cabinet</p>
+                        </div>
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>Waiting Chair</p>
+                        </div>
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>Bathroom (Hot & Cold Water)</p>
+                        </div>
+                        <div class="feature-item">
+                            <img src="media/call-in-action/checkmark.png" alt="">
+
+                            <p>TV LED + WIFI</p>
+                        </div>
+                    </div>
+                    <button class="btn-see-features">See More Features</button>
+                    <p class="or-text">or</p>
+                    <button class="btn-choose-plan primary">Choose Plan</button>
+                </div>
+            </div>
+
+            <div style="display: block;">
+                 <div class="price-card" style="max-width: 3000px;">
+                <h3>VVIP Room</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit metus ex, id ullamcorper
+                    massa accumsan volutpat.</p>
+                <h4>$50.6 <span class="per-person">/ Person</span></h4>
+                <div class="line-separator"></div>
+                <h5>Features</h5>
+                <div class="features-list">
+                    <div class="feature-item">
+                        <img src="media/call-in-action/checkmark.png" alt="">
+
+                        <p>Bedside Cabinet</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="media/call-in-action/checkmark.png" alt="">
+
+                        <p>Waiting Chair + Sofa</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="media/call-in-action/checkmark.png" alt="">
+
+                        <p>Bathroom (Hot & Cold Water)</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="media/call-in-action/checkmark.png" alt="">
+
+                        <p>TV LED + WIFI</p>
+                    </div>
+                </div>
+                <button class="btn-see-features">See More Features</button>
+                <p class="or-text">or</p>
+                <button class="btn-choose-plan">Choose Plan</button>
+            </div>
+            </div>
+           
+        </div>
+
+        <div class="pricing-footer">
+            <button class="btn-see-more-plan">See More Plan</button>
+        </div>
+    </section>
     <footer>
         <div class="footer-container">
             <div class="footer-left">
