replacing # in nav with real links of pages

--- a/Code/pages/about.html
+++ b/Code/pages/about.html
@@ -35,12 +35,12 @@
 
                 <a href="../index.html">Home</a>
                 <div class="nav-link-active">
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                     <img src="../media/under.png" alt="underline">
                 </div>
                 <a href="doctors.html">Doctors</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
             </nav>
             <div class="nright">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
