--- a/Code/pages/contact.html
+++ b/Code/pages/contact.html
@@ -36,8 +36,8 @@
                 <a href="../index.html">Home</a>
                 
                 <a href="doctors.html">About</a>
-                <a href="#">Doctors</a>
-                <a href="">Services</a>
+                <a href="doctors.html">Doctors</a>
+                <a href="services.html">Services</a>
                 <div class="nav-link-active">
                     <a href="about.html">Contact</a>
                     <img src="../media/under.png" alt="underline">
