--- a/Code/pages/doctors.html
+++ b/Code/pages/doctors.html
@@ -40,8 +40,8 @@
                     <a href="doctors.html">Doctors</a>
                     <img src="../media/under.png" alt="underline">
                 </div>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
+                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
             </nav>
             <div class="nright">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
