--- a/Code/pages/services.html
+++ b/Code/pages/services.html
@@ -35,13 +35,13 @@
 
                 <a href="../index.html">Home</a>
                 
-                <a href="doctors.html">About</a>
-                <a href="#">Doctors</a>
+                <a href="about.html">About</a>
+                <a href="doctors.html">Doctors</a>
                 <div class="nav-link-active">
-                    <a href="about.html">Services</a>
+                    <a href="services.html">Services</a>
                     <img src="../media/under.png" alt="underline">
                 </div>
-                <a href="">Contact</a>
+                <a href="contact.html">Contact</a>
                 
             </nav>
             <div class="nright">
