--- a/Code/index.html
+++ b/Code/index.html
@@ -37,9 +37,9 @@
                     <img src="media/under.png" alt="underline">
                 </div>
                 <a href="pages/about.html">About</a>
-                <a href="#">Doctors</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
+                <a href="pages/doctors.html">Doctors</a>
+                <a href="pages/services.html">Services</a>
+                <a href="pages/contact.html">Contact</a>
             </nav>
             <div class="nright">
                 <i class="fa-solid fa-magnifying-glass search-icon"></i>
