replacing images and info in doctors section in homepage with real info

--- a/Code/index.html
+++ b/Code/index.html
@@ -356,7 +356,7 @@
                             <img src="media/doctors/1.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;"></h3>
+                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
                                 <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
@@ -368,8 +368,8 @@
                             <img src="media/doctors/2.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Irma Winnifred</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Dentist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -377,11 +377,11 @@
                     </div>
                     <div class="doccard">
                         <div class="doccard-top">
-                            <img src="media/doctors/1.png" alt="">
+                            <img src="media/doctors/3.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Mnason Prabhakar</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Phatologist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -391,11 +391,11 @@
                 <div class="row">
                     <div class="doccard">
                         <div class="doccard-top">
-                            <img src="media/doctors/1.png" alt="">
+                            <img src="media/doctors/4.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Lage Rodrigo</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Orthopedics</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -403,11 +403,11 @@
                     </div>
                     <div class="doccard">
                         <div class="doccard-top">
-                            <img src="media/doctors/1.png" alt="">
+                            <img src="media/doctors/5.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Giusi Marjut</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Surgeon</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -415,11 +415,11 @@
                     </div>
                     <div class="doccard">
                         <div class="doccard-top">
-                            <img src="media/doctors/1.png" alt="">
+                            <img src="media/doctors/6.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Freyr Johano</h3>
+                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Internist</h2>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
