changing names of images - validator W3

--- a/Code/pages/about.html
+++ b/Code/pages/about.html
@@ -188,7 +188,7 @@
        <section class="call-in-action">
         <div class="card-call">
             <div class="cia-left">
-                <img src="../media/call-in-action/Rectangle 96.png" alt="Blue background for call to action banner">
+                <img src="../media/call-in-action/rectangle-96.png" alt="Blue background for call to action banner">
                 <div class="cia-content">
                     <h1>Your Health Deserves <br> The Best Care</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit metus ex, id
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="cia-right">
-                <img src="../media/call-in-action/Rectangle 97.png" alt="Scientist looking at a test tube">
+                <img src="../media/call-in-action/rectangle-97.png" alt="Scientist looking at a test tube">
             </div>
         </div>
     </section>
