--- a/Code/index.html
+++ b/Code/index.html
@@ -442,7 +442,7 @@
     <section class="call-in-action">
         <div class="card-call">
             <div class="cia-left">
-                <img src="media/call-in-action/Rectangle 96.png" alt="Blue background for call to action banner">
+                <img src="media/call-in-action/Rectangle-96.png" alt="Blue background for call to action banner">
                 <div class="cia-content">
                     <h1>Want to Immediately <br>See Our Trusted Doctor?</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit metus ex, id
@@ -454,7 +454,7 @@
                 </div>
             </div>
             <div class="cia-right">
-                <img src="media/call-in-action/Rectangle 97.png" alt="Scientist looking at a test tube">
+                <img src="media/call-in-action/Rectangle-97.png" alt="Scientist looking at a test tube">
             </div>
         </div>
     </section>
