--- a/Code/index.html
+++ b/Code/index.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        xintegrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -119,16 +119,16 @@
         </section>
     </div>
 
-    <section class="partners">
+    <div class="partners">
         <div class="pcontent">
             <img src="media/partners/1.png" alt="">
             <img src="media/partners/2.png" alt="">
             <img src="media/partners/3.png" alt="">
             <img src="media/partners/4.png" alt="">
         </div>
-    </section>
-    <section class="spacee"></section>
-    <section class="aboutus">
+    </div>
+    <div class="spacee"></div>
+    <div class="aboutus">
         <section class="aucontent">
             <div id="circle"></div>
             <div class="auleft">
@@ -146,7 +146,7 @@
 
             </div>
             <div class="auright">
-                <div id="topau">
+                <div class="top-tag">
                     <p>ABOUT US</p>
                 </div>
                 <div>
@@ -187,7 +187,7 @@
                 </button>
             </div>
         </section>
-    </section>
+    </div>
 
     <section class="stats">
         <div class="numbers">
@@ -215,7 +215,7 @@
 
     <section class="services">
         <div class="scontent">
-            <div id="topau">
+            <div class="top-tag">
                 <p>OUR SERVICES</p>
             </div>
             <div class="top">
@@ -356,8 +356,8 @@
                             <img src="media/doctors/1.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h2>
+                                <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h3>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -368,8 +368,8 @@
                             <img src="media/doctors/2.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Irma Winnifred</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Dentist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Irma Winnifred</h2>
+                                <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Dentist</h3>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -380,8 +380,8 @@
                             <img src="media/doctors/3.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Mnason Prabhakar</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Phatologist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Mnason Prabhakar</h2>
+                                <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Phatologist</h3>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -394,8 +394,8 @@
                             <img src="media/doctors/4.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Lage Rodrigo</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Orthopedics</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Lage Rodrigo</h2>
+                                <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Orthopedics</h3>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -406,8 +406,8 @@
                             <img src="media/doctors/5.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Giusi Marjut</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Surgeon</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Giusi Marjut</h2>
+                                <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Surgeon</h3>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
@@ -418,8 +418,8 @@
                             <img src="media/doctors/6.png" alt="">
                         </div>
                         <div class="doccard-mid">
-                            <h2 style="color: #2677BC;font-weight: bold;">Freyr Johano</h3>
-                                <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Internist</h2>
+                            <h2 style="color: #2677BC;font-weight: bold;">Freyr Johano</h2>
+                                <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Internist</h3>
                                 <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                     Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                                 </p>
