--- a/Code/pages/contact.html
+++ b/Code/pages/contact.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        xintegrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -60,7 +60,7 @@
 
         </section>
 
-        <section class="book-appointment-section" style="background-image: none; position: relative;height: 60vh;" >
+        <div class="book-appointment-section" style="background-image: none; position: relative;height: 60vh;" >
     <div class="appointment-form-container" style="position: absolute;width: 100%;top:-25%;right: 15%;">
         <form>
             <div class="form-row">
@@ -108,7 +108,7 @@
             <button type="submit" class="btn-form-submit">Send →</button>
         </form>
     </div>
-</section>
+</div>
 
     </div>
            <footer>
