--- a/Code/pages/doctors.html
+++ b/Code/pages/doctors.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        xintegrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body>
@@ -83,8 +83,8 @@
                         <img src="../media/doctors/1.png" alt="">
                     </div>
                     <div class="doccard-mid">
-                        <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h3>
-                            <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                        <h2 style="color: #2677BC;font-weight: bold;">Micol Efigenia</h2>
+                            <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h3>
                             <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                 Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                             </p>
@@ -95,8 +95,8 @@
                         <img src="../media/doctors/2.png" alt="">
                     </div>
                     <div class="doccard-mid">
-                        <h2 style="color: #2677BC;font-weight: bold;">Irma Winnifred</h3>
-                            <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h2>
+                        <h2 style="color: #2677BC;font-weight: bold;">Irma Winnifred</h2>
+                            <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Cardiologist</h3>
                             <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                 Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                             </p>
@@ -109,8 +109,8 @@
                         <img src="../media/doctors/3.png" alt="">
                     </div>
                     <div class="doccard-mid">
-                        <h2 style="color: #2677BC;font-weight: bold;">Mnason Prabhakar</h3>
-                            <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Phatologist</h2>
+                        <h2 style="color: #2677BC;font-weight: bold;">Mnason Prabhakar</h2>
+                            <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Phatologist</h3>
                             <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                 Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                             </p>
@@ -123,8 +123,8 @@
                         <img src="../media/doctors/4.png" alt="">
                     </div>
                     <div class="doccard-mid">
-                        <h2 style="color: #2677BC;font-weight: bold;">Lage Rodrigo</h3>
-                            <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Orthopedics</h2>
+                        <h2 style="color: #2677BC;font-weight: bold;">Lage Rodrigo</h2>
+                            <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Orthopedics</h3>
                             <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                 Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                             </p>
@@ -135,8 +135,8 @@
                         <img src="../media/doctors/5.png" alt="">
                     </div>
                     <div class="doccard-mid">
-                        <h2 style="color: #2677BC;font-weight: bold;">Giusi Marjut</h3>
-                            <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Surgeon</h2>
+                        <h2 style="color: #2677BC;font-weight: bold;">Giusi Marjut</h2>
+                            <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Surgeon</h3>
                             <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                 Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                             </p>
@@ -149,8 +149,8 @@
                         <img src="../media/doctors/6.png" alt="">
                     </div>
                     <div class="doccard-mid">
-                        <h2 style="color: #2677BC;font-weight: bold;">Freyr Johano</h3>
-                            <h2 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Internist</h2>
+                        <h2 style="color: #2677BC;font-weight: bold;">Freyr Johano</h2>
+                            <h3 style="color: #FF6F61; font-weight: 400; margin-top: 15px;">Internist</h3>
                             <p style="margin-bottom: 50px; margin-top: 30px; color: #5B5B5B; width: 300px;">
                                 Cardiologist with 8 years experience. Has been certified as the best heart doctor.
                             </p>
